# ergo-stratum-rs

./: Cargo.toml  LICENSE-MIT  README.md  run-solo.sh
ergo-solo/: Cargo.toml
ergo-solo/src/: config.rs  handler.rs  job_source.rs  main.rs  node.rs  server.rs
ergo-stratum/: Cargo.toml
ergo-stratum/src/: extranonce.rs  job.rs  lib.rs  protocol.rs  session.rs  share.rs  vardiff.rs
